--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Portfolio</title>
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
@@ -16,37 +16,34 @@
   <link rel="stylesheet" href="style.css">
 </head>
 
-<body class="bg-dark">
+<body class="bg-light">
 
-  <nav class="navbar navbar-expand-sm navbar-dark" id="neubar" >
-    <div class="container">
-      <a class="navbar-brand" href="#"><img src="https://www.ee.iitb.ac.in/course/~eesa/img/logo.png" height="60" /></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+  <nav class="navbar navbar-expand-sm navbar-dark" id="neubar">
+    <div class="container" style="padding: 0px 5px;">
+      <a class="navbar-brand" href="#">
+        <img
+          src="https://www.pinclipart.com/picdir/big/14-148660_electrical-clipart-electrical-energy-electric-energy-png-download.png"
+          height="60" />
+        </a>
+        <a style="font-size: 40px;font-family: Lar;text-align: left;">EESA</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-
-      <div class=" collapse navbar-collapse" id="navbarNavDropdown">
+      
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ms-auto ">
           <li class="nav-item">
-            <a class="nav-link mx-2" aria-current="page" href="#">Home</a>
+            <a class="nav-link mx-2 nav-a" style="color:#242424;" aria-current="page"
+              href="https://www.ee.iitb.ac.in/course/~eesa/index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link mx-2" href="#">Products</a>
+            <a class="nav-link mx-2 nav-a" style="color:#242424"
+              href="https://www.ee.iitb.ac.in/course/~eesa/blogs.html">Blogs</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link mx-2" href="#">Pricing</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link mx-2 dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-              data-bs-toggle="dropdown" aria-expanded="false">
-              Company
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <li><a class="dropdown-item" href="#">Blog</a></li>
-              <li><a class="dropdown-item" href="#">About Us</a></li>
-              <li><a class="dropdown-item" href="#">Contact us</a></li>
-            </ul>
+            <a class="nav-link mx-2 nav-a" style="color:#242424"
+              href="https://www.ee.iitb.ac.in/course/~eesa/activities.html">Activities</a>
           </li>
         </ul>
       </div>
@@ -54,17 +51,20 @@
   </nav>
 
   <!--Portfolio-->
-  <section id="portfolio">
+  <section>
     <div class="text-center container-md mt-3 p-3">
-      <div class="card">
+      <div class="card" id="portfolio">
         <div class="text-center container-fluid mt-3">
           <img style="border-radius: 15em;"
             src="https://media.licdn.com/dms/image/D4D03AQHT_7T0RpxZhw/profile-displayphoto-shrink_400_400/0/1682571113646?e=1688601600&v=beta&t=Cikb47ZpqgGolwKELdLXm4JjQ4sQHZ8OafLuHRbdZrg"
             class=" img-fluid" alt="...">
         </div>
         <div class="card-body">
-          <h3 class="card-title" style="font-size: 40px;color: #313030; font-family: Lar;">Utkarsh Maurya : Web Designer</h3>
-          <p class="card-text" style="font-size: 16px;color: #313030;" >Hii! I'm a freshi at IITB in electrical engineering department</p>
+          <h3 class="card-title" style="font-size: 40px;color: #313030; font-family: Lar;">Utkarsh Maurya : Web Designer
+          </h3>
+          <p class="card-text" style="font-size: 20px;color: #313030;font-family: LarThin;">Hii! I'm a freshi at IITB in
+            electrical
+            engineering department</p>
         </div>
       </div>
     </div>
@@ -76,16 +76,18 @@
       <div id="description" class="card">
         <div class="card-body">
           <h1 style="font-size: 40px;color: #313030; font-family: Lar;">About Me</h1>
-          <h5 class="card-title" style="font-size: 16px;">I love to code and design new things , learning new things is my hobby</h5>
-          <p class="card-text">Coding , Maths , Physics </p>
+          <h5 class="card-title" style="font-size: 20px;color: #313030; font-family: LarThin;">I love to code and design
+            new things , learning new things is my hobby</h5>
+          <p style="font-size: 20px;color: #313030; font-family: LarThin;" class="card-text">Coding , Maths , Physics
+          </p>
         </div>
       </div>
-      
+
     </div>
     <div id="skills" class="accordion accordion-flush container-xl" id="accordionFlushExample">
       <div class="card" style="border-radius: 0;">
         <div class="card-body">
-          <h3>Skills</h3>
+          <h3 style="font-size: 40px;color: #313030; font-family: Lar;">Skills</h3>
         </div>
       </div>
       <div class="accordion-item">
@@ -97,7 +99,8 @@
         </h2>
         <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
           data-bs-parent="#accordionFlushExample">
-          <div class="accordion-body">Started learning Java back in 7th standard out of curiosity and learning ever since 
+          <div class="accordion-body">Started learning Java back in 7th standard out of curiosity and learning ever
+            since
           </div>
         </div>
       </div>
@@ -105,7 +108,7 @@
         <h2 class="accordion-header" id="flush-headingTwo">
           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
             data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-            HTML , CSS , JS 
+            HTML , CSS , JS
           </button>
         </h2>
         <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
@@ -124,7 +127,7 @@
         </h2>
         <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree"
           data-bs-parent="#accordionFlushExample">
-          <div class="accordion-body">Example project include this website , built on 
+          <div class="accordion-body">Example project include this website , built on
             <code>bootstrap</code> in two days
           </div>
         </div>
@@ -160,7 +163,7 @@
         <li class="menu__item"><a class="menu__link" href="#">Contact</a></li>
 
       </ul>
-      <p>&copy;2021 Nadine Coelho | All Rights Reserved</p>
+      <p id="copy">&copy;2023 IIT Bombay | All Rights Reserved</p>
     </footer>
 
 </body>
