--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
         <img
           src="https://www.pinclipart.com/picdir/big/14-148660_electrical-clipart-electrical-energy-electric-energy-png-download.png"
           height="60" />
-        </a>
-        <a style="font-size: 40px;font-family: Lar;text-align: left;">EESA</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+      </a>
+      <a style="font-size: 40px;font-family: Lar;text-align: left;">EESA</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      
+
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ms-auto ">
           <li class="nav-item">
@@ -60,11 +60,11 @@
             class=" img-fluid" alt="...">
         </div>
         <div class="card-body">
-          <h3 class="card-title" style="font-size: 40px;color: #313030; font-family: Lar;">Utkarsh Maurya : Web Designer
+          <h3 class="card-title" style="font-size: 40px;color: #313030; font-family: Lar;">Utkarsh Maurya
           </h3>
-          <p class="card-text" style="font-size: 20px;color: #313030;font-family: LarThin;">Hii! I'm a freshi at IITB in
+          <p class="card-text" style="font-size: 20px;color: #313030;font-family: LarThin;">Hi! I'm a freshi at IITB in
             electrical
-            engineering department</p>
+            engineering department . I'm passionate about coding and science  , an enthuciastic learner who can work well in teams .</p>
         </div>
       </div>
     </div>
@@ -76,13 +76,23 @@
       <div id="description" class="card">
         <div class="card-body">
           <h1 style="font-size: 40px;color: #313030; font-family: Lar;">About Me</h1>
-          <h5 class="card-title" style="font-size: 20px;color: #313030; font-family: LarThin;">I love to code and design
-            new things , learning new things is my hobby</h5>
-          <p style="font-size: 20px;color: #313030; font-family: LarThin;" class="card-text">Coding , Maths , Physics
+          <h5 class="card-title" style="font-size: 25px;color: #141414; font-family: LarThin;">Education</h5>
+          <p style="font-size: 20px;color: #313030; font-family: LarThin;" class="card-text">Class 12 : Bishop Johnson School and Collage , Allahabad UP
           </p>
+          <p style="font-size: 20px;color: #313030; font-family: LarThin;" class="card-text">College : IIT Bombay - Electrical engineering (ongoing)
+          </p>
+          <h5 class="card-title" style="font-size: 25px;color: #141414; font-family: LarThin;">Work Experience</h5>
+          <p style="font-size: 20px;color: #313030; font-family: LarThin;" class="card-text">I have past experiences of
+            programming in a diverse area including but not limited to Web Development , Android App Development , Game
+            Development(Unity) , Elementary Physics simulations and Animations .
+          </p>
+          <h5 class="card-title" style="font-size: 25px;color: #141414; font-family: LarThin;">Projects</h5>
+          <p style="font-size: 20px;color: #313030; font-family: LarThin;" class="card-text">Events Management Website for Insti (DevCom)
+          </p>
+          <p style="font-size: 20px;color: #313030; font-family: LarThin;" class="card-text">SaveTheDay - 2D android game
+          </p> 
         </div>
       </div>
-
     </div>
     <div id="skills" class="accordion accordion-flush container-xl" id="accordionFlushExample">
       <div class="card" style="border-radius: 0;">
@@ -114,7 +124,7 @@
         <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
           data-bs-parent="#accordionFlushExample">
           <div class="accordion-body">The web trio , this is field where I have spend most of my time on.
-            <code>HTML</code> Also know many libraries like p5.js ,Angular
+            <code>HTML</code> Also know many libraries like <code>p5.js</code> , <code>jQuery</code>
           </div>
         </div>
       </div>
@@ -122,25 +132,31 @@
         <h2 class="accordion-header" id="flush-headingThree">
           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
             data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-            bootstrap
+            p5.js - Processing
           </button>
         </h2>
         <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree"
           data-bs-parent="#accordionFlushExample">
-          <div class="accordion-body">Example project include this website , built on
-            <code>bootstrap</code> in two days
+          <div class="accordion-body"> JavaScript and Java canvas based libraries respectively which allow us to create dynamic rendered code , I have made many animations and physics simulations using this
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="flush-headingThree">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+            data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+            Angular
+          </button>
+        </h2>
+        <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree"
+          data-bs-parent="#accordionFlushExample">
+          <div class="accordion-body"> Made the Event Management Website using <code>Angular</code>
           </div>
         </div>
       </div>
     </div>
 
     <footer class="footer">
-      <!-- <div class="waves">
-          <div class="wave" id="wave1"></div>
-          <div class="wave" id="wave2"></div>
-          <div class="wave" id="wave3"></div>
-          <div class="wave" id="wave4"></div>
-        </div> -->
       <ul class="social-icon">
         <li class="social-icon__item"><a class="social-icon__link" href="#">
             <ion-icon name="logo-facebook"></ion-icon>
@@ -148,10 +164,11 @@
         <li class="social-icon__item"><a class="social-icon__link" href="#">
             <ion-icon name="logo-twitter"></ion-icon>
           </a></li>
-        <li class="social-icon__item"><a class="social-icon__link" href="#">
+        <li class="social-icon__item"><a class="social-icon__link"
+            href="https://www.linkedin.com/in/utkarsh-maurya-75602a263/">
             <ion-icon name="logo-linkedin"></ion-icon>
           </a></li>
-        <li class="social-icon__item"><a class="social-icon__link" href="#">
+        <li class="social-icon__item"><a class="social-icon__link" href="https://www.instagram.com/utkarsh_x_o/">
             <ion-icon name="logo-instagram"></ion-icon>
           </a></li>
       </ul>
