--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
         <div class="card-body">
           <h3 class="card-title" style="font-size: 40px;color: #313030; font-family: Lar;">Utkarsh Maurya
           </h3>
-          <p class="card-text" style="font-size: 20px;color: #313030;font-family: LarThin;">Hi! I'm a freshi at IITB in
+          <p class="card-text" style="font-size: 20px;color: #313030;font-family: LarThin;">Hi! I'm a freshie at IITB in
             electrical
-            engineering department . I'm passionate about coding and science  , an enthuciastic learner who can work well in teams .</p>
+            engineering department . I'm passionate about coding and science  , an enthusiastic learner who can work well in teams .</p>
         </div>
       </div>
     </div>
@@ -142,13 +142,13 @@
         </div>
       </div>
       <div class="accordion-item">
-        <h2 class="accordion-header" id="flush-headingThree">
+        <h2 class="accordion-header" id="flush-headingFour">
           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-            data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+            data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
             Angular
           </button>
         </h2>
-        <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree"
+        <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour"
           data-bs-parent="#accordionFlushExample">
           <div class="accordion-body"> Made the Event Management Website using <code>Angular</code>
           </div>
