--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <div class="card" id="portfolio">
         <div class="text-center container-fluid mt-3">
           <img style="border-radius: 15em;"
-            src="https://media.licdn.com/dms/image/D4D03AQHT_7T0RpxZhw/profile-displayphoto-shrink_400_400/0/1682571113646?e=1688601600&v=beta&t=Cikb47ZpqgGolwKELdLXm4JjQ4sQHZ8OafLuHRbdZrg"
+            src="img.jpg"
             class=" img-fluid" alt="...">
         </div>
         <div class="card-body">
